--- a/views/singin.hbs
+++ b/views/singin.hbs
@@ -1,14 +1,14 @@
 
 <form action="/user/singin" method="POST">
-    <input type="text" name="user" placeholder="usuario">
-    <input type="text" name="first_name" placeholder="nombre">
-    <input type="text" name="last_name" placeholder="apellido">
-    <input type="email" name="email" placeholder="email">
-    <input type="text" name="address" placeholder="dirección">
-    <input type="tel" name="phone" placeholder="telefóno">
-    <input type="password" name="password" placeholder="contraseña">
-    <input type="password" name="pws-confirm" placeholder="confirmar contraseña">
-    <input type="submit" value="Crear Usuario">
+    <input type="text" name="user" placeholder="usuario" required>
+    <input type="text" name="first_name" placeholder="nombre" required>
+    <input type="text" name="last_name" placeholder="apellido" required>
+    <input type="email" name="email" placeholder="email" required>
+    <input type="text" name="address" placeholder="dirección" required>
+    <input type="tel" name="phone" placeholder="telefóno" required>
+    <input type="password" name="password" placeholder="contraseña" required>
+    <input type="password" name="pws-confirm" placeholder="confirmar contraseña" required>
+    <input type="submit" value="Crear Usuario" id="submit">
     <label for="treminos" class="check-content">     
         <span>
             Estoy de acuerdo con los
@@ -18,10 +18,22 @@
                 Términos y Condiciones
             </a>
         </span>
-        <input type="checkbox" name="treminos" id="treminos">
+        <input onchange="AceptarTerminos(this)" type="checkbox" name="treminos" id="treminos" checked="true">
         <span class="checkmark"></span>
     </label>
 
 
 </form>
 
+<script>
+
+    function AceptarTerminos(check)
+    {
+        let submit = document.getElementById('submit')
+        if(check.checked)
+            submit.disabled  = false
+        else
+            submit.disabled  = true
+    }
+
+</script>
