--- a/public/index.css
+++ b/public/index.css
@@ -249,6 +249,12 @@ input[type=submit] {
   cursor: pointer;
 }
 
+input[type="submit"]:disabled {
+  cursor: default;
+  background-color: #d6d4d4;
+  color: rgb(84, 84, 84);
+}
+
 .check-content {
   display: block;
   position: relative;
@@ -278,7 +284,7 @@ input[type=checkbox] {
   left: 0;
   height: 4vw;
   width: 4vw;
-  background-color: #eee;
+  background-color: #d6d4d4;
 }
 
 .check-content:hover input ~ .checkmark {
